15682
The attached files should be separately compiled. It works in 2.8.0, fails in 2.8.1.RC1 with:
```scala
 ~/code/scratch/tuples-bug: ~/usr/scala-2.8.1.RC1/bin/scalac -d out tuples_1.scala && ~/usr/scala-2.8.1.RC1/bin/scalac -d out -classpath out scalaz_2.scala 
java.lang.ArrayIndexOutOfBoundsException: 53162
	at scala.reflect.generic.PickleBuffer.readByte(PickleBuffer.scala:101)
	at scala.reflect.generic.PickleBuffer$$$$anonfun$$createIndex$$1.apply$$mcVI$$sp(PickleBuffer.scala:182)
	at scala.collection.immutable.Range$$ByOne$$class.foreach$$mVc$$sp(Range.scala:282)
	at scala.collection.immutable.Range$$$$anon$$2.foreach$$mVc$$sp(Range.scala:265)
	at scala.reflect.generic.PickleBuffer.createIndex(PickleBuffer.scala:180)
	at scala.reflect.generic.UnPickler$$Scan.<init>(UnPickler.scala:57)
	at scala.tools.nsc.symtab.classfile.UnPickler$$CompileScan.<init>(UnPickler.scala:28)
	at scala.tools.nsc.symtab.classfile.UnPickler.scan(UnPickler.scala:26)
	at scala.tools.nsc.symtab.classfile.UnPickler.scan(UnPickler.scala:21)
	at scala.reflect.generic.UnPickler.unpickle(UnPickler.scala:35)
	at scala.tools.nsc.symtab.classfile.ClassfileParser.parseAttribute$$1(ClassfileParser.scala:913)
	at scala.tools.nsc.symtab.classfile.ClassfileParser$$$$anonfun$$parseAttributes$$1.apply$$mcVI$$sp(ClassfileParser.scala:1074)
	at scala.collection.immutable.Range$$ByOne$$class.foreach$$mVc$$sp(Range.scala:282)
	at scala.collection.immutable.Range$$$$anon$$2.foreach$$mVc$$sp(Range.scala:265)
	at scala.tools.nsc.symtab.classfile.ClassfileParser.parseAttributes(ClassfileParser.scala:1074)
	at scala.tools.nsc.symtab.classfile.ClassfileParser.parseClass(ClassfileParser.scala:582)
	at scala.tools.nsc.symtab.classfile.ClassfileParser.parse(ClassfileParser.scala:98)
	at scala.tools.nsc.symtab.SymbolLoaders$$ClassfileLoader.doComplete(SymbolLoaders.scala:247)
	at scala.tools.nsc.symtab.SymbolLoaders$$SymbolLoader.complete(SymbolLoaders.scala:61)
	at scala.tools.nsc.symtab.SymbolLoaders$$SymbolLoader.load(SymbolLoaders.scala:80)
	at scala.tools.nsc.typechecker.Typers$$Typer.isStale(Typers.scala:555)
	at scala.tools.nsc.typechecker.Typers$$Typer.reallyExists(Typers.scala:546)
	at scala.tools.nsc.typechecker.Typers$$Typer.qualifies$$1(Typers.scala:3658)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedIdent$$1(Typers.scala:3676)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:4121)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:4203)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTypeConstructor(Typers.scala:4315)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTypeConstructor(Typers.scala:4338)
	at scala.tools.nsc.typechecker.Typers$$Typer.parentTypes(Typers.scala:1123)
	at scala.tools.nsc.typechecker.Namers$$Namer.templateSig(Namers.scala:682)
	at scala.tools.nsc.typechecker.Namers$$Namer.typeSig(Namers.scala:1129)
	at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$typeCompleter$$1.apply(Namers.scala:523)
	at scala.tools.nsc.typechecker.Namers$$Namer$$$$anonfun$$typeCompleter$$1.apply(Namers.scala:521)
	at scala.tools.nsc.typechecker.Namers$$$$anon$$1.complete(Namers.scala:1309)
	at scala.tools.nsc.typechecker.Namers$$$$anon$$1.complete(Namers.scala:1307)
	at scala.tools.nsc.symtab.Symbols$$Symbol.info(Symbols.scala:733)
	at scala.tools.nsc.symtab.Symbols$$Symbol.initialize(Symbols.scala:846)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3840)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:4203)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:2128)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$20.apply(Typers.scala:2196)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$20.apply(Typers.scala:2196)
	at scala.collection.immutable.List.loop$$1(List.scala:115)
	at scala.collection.immutable.List.mapConserve(List.scala:132)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:2196)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3849)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:4203)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:4252)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$3.apply(Analyzer.scala:85)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$applyPhase$$1.apply(Global.scala:282)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$applyPhase$$1.apply(Global.scala:282)
	at scala.tools.nsc.reporters.Reporter.withSource(Reporter.scala:48)
	at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:282)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$3$$$$anonfun$$run$$1.apply(Analyzer.scala:80)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$3$$$$anonfun$$run$$1.apply(Analyzer.scala:80)
	at scala.collection.Iterator$$class.foreach(Iterator.scala:631)
	at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:304)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$3.run(Analyzer.scala:80)
	at scala.tools.nsc.Global$$Run.compileSources(Global.scala:741)
	at scala.tools.nsc.Global$$Run.compile(Global.scala:822)
	at scala.tools.nsc.Main$$.process(Main.scala:106)
	at scala.tools.nsc.Main$$.main(Main.scala:120)
	at scala.tools.nsc.Main.main(Main.scala)
error: error while loading Tuples, class file 'out/Tuples.class' is broken
(error reading Scala signature of out/Tuples.class: 53162)
scalaz_2.scala:1: error: illegal inheritance;
 self-type Scalaz.type does not conform to Tuples's selftype Tuples
object Scalaz extends Tuples
                      ^
scalaz_2.scala:1: error: illegal inheritance; superclass Tuples
 is not a subclass of the superclass Object
 of the mixin trait ScalaObject
object Scalaz extends Tuples
              ^
three errors found

 ~/code/scratch/tuples-bug: scalac -d out tuples_1.scala ; scalac -d out -classpath out scalaz_2.scala 
~
```
